# G9

./: .gitignore  Gran.pro  README.md  images.qrc  mainwindow.cpp  mainwindow.h  qtransparentlabel.cpp  qtransparentlabel.h  screenshoter.cpp  screenshoter.h
Source/: CMakeLists.txt  G9.pro  const.h  init.cpp  init.h  main.cpp  popupwindow.cpp  popupwindow.h  qcustomkeysequenceedit.cpp  qcustomkeysequenceedit.h  qtransparentlabel.cpp  qtransparentlabel.h  resources.qrc  screenshoter.cpp  screenshoter.h  settingswindow.cpp  settingswindow.h
Source/qxt/: qxtglobalshortcut.cpp  qxtglobalshortcut.h  qxtglobalshortcut_p.h
src/: G9.pro  main.cpp  mainwindow.cpp  mainwindow.h  popup.qss  popupwindow.cpp  popupwindow.h  screenshoter.cpp  screenshoter.h
